--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,42 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+ion-content {
+  --background: #f5f5f5;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+ion-list {
+  background: transparent;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+ion-item {
+  --background: white;
+  --border-radius: 8px;
+  margin-bottom: 8px;
 }
 
-#container a {
-  text-decoration: none;
+ion-thumbnail {
+  --size: 40px;
+  --border-radius: 4px;
+}
+
+ion-footer {
+  ion-toolbar {
+    --background: white;
+    --border-color: #e0e0e0;
+  }
+}
+
+ion-modal {
+  --width: 80%;
+  --height: 60%;
+  --border-radius: 16px;
+}
+
+ion-avatar {
+  img {
+    object-fit: cover;
+  }
+}
+
+.now-playing {
+  background: linear-gradient(to right, #3880ff, #3dc2ff);
+  color: white;
 }
