--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,151 +1,177 @@
 <ion-header>
   <ion-toolbar color="primary">
-    <ion-title>Boombox</ion-title>
+    <ion-title class="ion-text-center">BOOMBOX - ZANDALE</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-tabs (ionTabsDidChange)="currentTab = $event.tab">
-    <!-- Local Music Tab -->
-    <ion-tab tab="local">
-      <ion-list>
-        <ion-item *ngFor="let song of songs" (click)="playSong(song)">
-          <ion-avatar slot="start">
-            <img [src]="song.metadata.picture">
-          </ion-avatar>
-          <ion-label>
-            <h3>{{ song.metadata.title }}</h3>
-            <p>{{ song.metadata.artist }}</p>
-          </ion-label>
-          <ion-button slot="end" fill="clear" (click)="$event.stopPropagation(); addToPlaylistDialog(song)">
-            <ion-icon name="add"></ion-icon>
-          </ion-button>
-        </ion-item>
-      </ion-list>
-    </ion-tab>
+  <!-- Modern Tab Selector -->
+  <ion-segment [(ngModel)]="currentTab" color="primary">
+    <ion-segment-button value="local">
+      <ion-icon name="musical-notes"></ion-icon>
+      <ion-label>Local</ion-label>
+    </ion-segment-button>
+    <ion-segment-button value="stream">
+      <ion-icon name="radio"></ion-icon>
+      <ion-label>Stream</ion-label>
+    </ion-segment-button>
+    <ion-segment-button value="playlists">
+      <ion-icon name="list"></ion-icon>
+      <ion-label>Playlists</ion-label>
+    </ion-segment-button>
+  </ion-segment>
 
-    <!-- Streaming Tab -->
-    <ion-tab tab="stream">
-      <ion-searchbar 
-        [value]="searchQuery"
-        (ionChange)="handleSearchChange($event)"
-        placeholder="Search Deezer">
-      </ion-searchbar>
+  <!-- Local Music Tab -->
+  <div *ngIf="currentTab === 'local'" class="tab-content">
+    <ion-list lines="none">
+      <ion-item *ngFor="let song of songs" (click)="playSong(song)" button detail>
+        <ion-avatar slot="start">
+          <img [src]="song.metadata.picture" alt="Album cover">
+        </ion-avatar>
+        <ion-label>
+          <h3>{{ song.metadata.title }}</h3>
+          <p>{{ song.metadata.artist }}</p>
+        </ion-label>
+        <ion-button slot="end" fill="clear" color="primary" (click)="$event.stopPropagation(); addToPlaylistDialog(song)">
+          <ion-icon name="add" slot="icon-only"></ion-icon>
+        </ion-button>
+      </ion-item>
+    </ion-list>
+  </div>
+
+  <!-- Streaming Tab -->
+  <div *ngIf="currentTab === 'stream'" class="tab-content">
+    <ion-searchbar 
+      [value]="searchQuery"
+      (ionChange)="handleSearchChange($event)"
+      placeholder="Search Deezer"
+      animated
+      clear-icon="close-circle">
+    </ion-searchbar>
+    
+    <ion-list lines="none">
+      <ion-item *ngFor="let song of streamingSongs" (click)="playStream(song)" button detail>
+        <ion-avatar slot="start">
+          <img [src]="song.cover" alt="Album cover">
+        </ion-avatar>
+        <ion-label>
+          <h3>{{ song.title }}</h3>
+          <p>{{ song.artist }} • {{ song.album }}</p>
+        </ion-label>
+        <ion-button slot="end" fill="clear" color="primary" (click)="$event.stopPropagation(); addToPlaylistDialog(song)">
+          <ion-icon name="add" slot="icon-only"></ion-icon>
+        </ion-button>
+      </ion-item>
+    </ion-list>
+  </div>
+
+  <!-- Playlists Tab -->
+  <div *ngIf="currentTab === 'playlists'" class="tab-content">
+    <ion-list lines="none">
+      <ion-item>
+        <ion-input
+          [value]="newPlaylistName"
+          (ionChange)="handlePlaylistNameChange($event)"
+          placeholder="New playlist name"
+          clear-input>
+        </ion-input>
+        <ion-button slot="end" color="primary" (click)="createPlaylist()" [disabled]="!newPlaylistName">
+          Create
+        </ion-button>
+      </ion-item>
       
-      <ion-list>
-        <ion-item *ngFor="let song of streamingSongs" (click)="playStream(song)">
+      <ion-item *ngFor="let playlist of playlists; let i = index" (click)="currentPlaylist = playlist" button detail>
+        <ion-icon name="list-circle" slot="start" color="primary"></ion-icon>
+        <ion-label>{{ playlist.name }}</ion-label>
+        <ion-badge slot="end" color="primary">{{ playlist.songs.length }}</ion-badge>
+        <ion-button slot="end" fill="clear" color="danger" (click)="$event.stopPropagation(); deletePlaylist(i)">
+          <ion-icon name="trash" slot="icon-only"></ion-icon>
+        </ion-button>
+      </ion-item>
+    </ion-list>
+
+    <!-- Playlist Detail View -->
+    <div *ngIf="currentPlaylist" class="playlist-detail">
+      <ion-toolbar color="primary">
+        <ion-title>{{ currentPlaylist.name }}</ion-title>
+        <ion-buttons slot="end">
+          <ion-button (click)="currentPlaylist = null">
+            <ion-icon name="close" slot="icon-only"></ion-icon>
+          </ion-button>
+        </ion-buttons>
+      </ion-toolbar>
+      
+      <ion-list lines="none">
+        <ion-item *ngFor="let song of currentPlaylist.songs; let i = index" button detail>
           <ion-avatar slot="start">
-            <img [src]="song.cover">
+            <img [src]="song.cover || song.metadata.picture" alt="Album cover">
           </ion-avatar>
           <ion-label>
-            <h3>{{ song.title }}</h3>
-            <p>{{ song.artist }} • {{ song.album }}</p>
+            <h3>{{ song.title || song.metadata.title }}</h3>
+            <p>{{ song.artist || song.metadata.artist }}</p>
           </ion-label>
-          <ion-button slot="end" fill="clear" (click)="$event.stopPropagation(); addToPlaylistDialog(song)">
-            <ion-icon name="add"></ion-icon>
+          <ion-button slot="end" fill="clear" color="danger" 
+                     (click)="removeFromPlaylist(playlists.indexOf(currentPlaylist), i)">
+            <ion-icon name="trash" slot="icon-only"></ion-icon>
           </ion-button>
         </ion-item>
       </ion-list>
-    </ion-tab>
-
-    <!-- Playlists Tab -->
-    <ion-tab tab="playlists">
-      <ion-list>
-        <ion-item>
-          <ion-input
-            [value]="newPlaylistName"
-            (ionChange)="handlePlaylistNameChange($event)"
-            placeholder="New playlist name">
-          </ion-input>
-          <ion-button slot="end" (click)="createPlaylist()">Create</ion-button>
-        </ion-item>
-        
-        <ion-item *ngFor="let playlist of playlists; let i = index" (click)="currentPlaylist = playlist">
-          <ion-label>{{ playlist.name }}</ion-label>
-          <ion-badge slot="end">{{ playlist.songs.length }}</ion-badge>
-          <ion-button slot="end" fill="clear" color="danger" (click)="$event.stopPropagation(); deletePlaylist(i)">
-            <ion-icon name="trash"></ion-icon>
-          </ion-button>
-        </ion-item>
-      </ion-list>
-
-      <!-- Playlist Detail View -->
-      <div *ngIf="currentPlaylist">
-        <ion-toolbar color="secondary">
-          <ion-title>{{ currentPlaylist.name }}</ion-title>
-          <ion-buttons slot="end">
-            <ion-button (click)="currentPlaylist = null">Close</ion-button>
-          </ion-buttons>
-        </ion-toolbar>
-        
-        <ion-list>
-          <ion-item *ngFor="let song of currentPlaylist.songs; let i = index">
-            <ion-avatar slot="start">
-              <img [src]="song.cover || song.metadata.picture">
-            </ion-avatar>
-            <ion-label>
-              <h3>{{ song.title || song.metadata.title }}</h3>
-              <p>{{ song.artist || song.metadata.artist }}</p>
-            </ion-label>
-            <ion-button slot="end" fill="clear" color="danger" 
-                       (click)="removeFromPlaylist(playlists.indexOf(currentPlaylist), i)">
-              <ion-icon name="trash"></ion-icon>
-            </ion-button>
-          </ion-item>
-        </ion-list>
-      </div>
-    </ion-tab>
-  </ion-tabs>
-
-  <!-- Now Playing Bar -->
-  <ion-footer *ngIf="nowPlaying">
-    <ion-toolbar>
-      <ion-grid>
-        <ion-row class="ion-align-items-center">
-          <ion-col size="3">
-            <ion-thumbnail>
-              <img [src]="nowPlaying.cover">
-            </ion-thumbnail>
-          </ion-col>
-          <ion-col size="6">
-            <ion-label>
-              <h4>{{ nowPlaying.title }}</h4>
-              <p>{{ nowPlaying.artist }}</p>
-            </ion-label>
-          </ion-col>
-          <ion-col size="3" class="ion-text-center">
-            <ion-buttons>
-              <ion-button (click)="pause()">
-                <ion-icon name="pause"></ion-icon>
-              </ion-button>
-              <ion-button (click)="stop()">
-                <ion-icon name="stop"></ion-icon>
-              </ion-button>
-            </ion-buttons>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-    </ion-toolbar>
-  </ion-footer>
-
-  <!-- Add to Playlist Dialog -->
-  <ion-modal [isOpen]="showPlaylistDialog" (didDismiss)="showPlaylistDialog = false">
-    <ng-template>
-      <ion-header>
-        <ion-toolbar>
-          <ion-title>Add to Playlist</ion-title>
-          <ion-buttons slot="end">
-            <ion-button (click)="showPlaylistDialog = false">Close</ion-button>
-          </ion-buttons>
-        </ion-toolbar>
-      </ion-header>
-      <ion-content>
-        <ion-list>
-          <ion-item *ngFor="let playlist of playlists; let i = index" (click)="addToPlaylist(i)">
-            <ion-label>{{ playlist.name }}</ion-label>
-          </ion-item>
-        </ion-list>
-      </ion-content>
-    </ng-template>
-  </ion-modal>
+    </div>
+  </div>
 </ion-content>
+
+<!-- Fixed Now Playing Bar -->
+<ion-footer *ngIf="nowPlaying">
+  <ion-toolbar>
+    <ion-grid>
+      <ion-row class="ion-align-items-center">
+        <ion-col size="3">
+          <ion-thumbnail>
+            <img [src]="nowPlaying.cover" alt="Now playing">
+          </ion-thumbnail>
+        </ion-col>
+        <ion-col size="6">
+          <ion-label class="now-playing-info">
+            <h3>{{ nowPlaying.title }}</h3>
+            <p>{{ nowPlaying.artist }}</p>
+          </ion-label>
+        </ion-col>
+        <ion-col size="3" class="ion-text-center">
+          <ion-buttons>
+            <ion-button (click)="pause()" fill="clear">
+              <ion-icon name="pause" color="primary"></ion-icon>
+            </ion-button>
+            <ion-button (click)="stop()" fill="clear">
+              <ion-icon name="stop" color="primary"></ion-icon>
+            </ion-button>
+          </ion-buttons>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-toolbar>
+</ion-footer>
+
+<!-- Playlist Add Modal -->
+<ion-modal [isOpen]="showPlaylistDialog" (didDismiss)="showPlaylistDialog = false">
+  <ng-template>
+    <ion-header>
+      <ion-toolbar color="primary">
+        <ion-title>Add to Playlist</ion-title>
+        <ion-buttons slot="end">
+          <ion-button (click)="showPlaylistDialog = false">
+            <ion-icon name="close" slot="icon-only"></ion-icon>
+          </ion-button>
+        </ion-buttons>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <ion-list lines="none">
+        <ion-item *ngFor="let playlist of playlists; let i = index" (click)="addToPlaylist(i)" button detail>
+          <ion-icon name="musical-notes" slot="start" color="primary"></ion-icon>
+          <ion-label>{{ playlist.name }}</ion-label>
+          <ion-badge slot="end" color="primary">{{ playlist.songs.length }}</ion-badge>
+        </ion-item>
+      </ion-list>
+    </ion-content>
+  </ng-template>
+</ion-modal>
